# k8s_control_system

./: Makefile  README.md  car  collector.yaml  dc_motor  fuzzy-ctrl.yaml
control/: control.cpp  control.py
controllers/fuzzy_cpp/: CMakeLists.txt  Dockerfile
controllers/fuzzy_cpp/src/: main.cpp
controllers/fuzzy_py/: Dockerfile  control.py  requirements.txt
plants/: Makefile
plants/car/: main.c
plants/common/: network.h  solver.h
plants/common/include/: setpoint.h
plants/common/src/: network.c  solver.c
plants/dc_motor/: main.c
plants/tank/: main.c
scripts/: config.env
